# vizta

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: docs.yml  lint.yml  tests.yml
api/: index.html
docs/: api.md  index.ipynb
docs/stylesheets/: extra.css
search/: search_index.json
tests/unit_tests/: test_mpl_themes.py  test_palettes.py  test_plotly_theme.py  test_version.py
vizta/: __init__.py  palettes.py  utils.py  version.py  vizta.py
vizta/mpl/: __init__.py  themes.py
vizta/plotly/: __init__.py  themes.py
