[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "vizta"
authors = [{name = "William E. Fondrie", email = "wfondrie@talus.bio"}]
description = "Fast and flexible semi-supervised learning for peptide detection"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.6"
dependencies = [
    "matplotlib>=3.5.1",
    "seaborn>=0.11.2",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/TalusBio/vizta"
Documentation = "https://TalusBio.github.io/vizta"
"Bug Tracker" = "https://github.com/TalusBio/vizta/issues"
"Discussion Board" = "https://github.com/TalusBio/vizta/discussions"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.3.0",
    "mkdocstrings>=0.18.1",
    "mkdocs-material>=8.2.1",
    "mkdocs-jupyter>=0.20.1",
    "ipykernel>=6.12.1",
]
dev = [
    "pre-commit>=2.7.1",
    "black>=19.10b0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
