[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "vizta"
authors = [{name = "William E. Fondrie", email = "wfondrie@talus.bio"}]
description = "Fast and flexible semi-supervised learning for peptide detection"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.5.1",
    "seaborn>=0.11.2",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/TalusBio/vizta"
Documentation = "https://TalusBio.github.io/vizta"
"Bug Tracker" = "https://github.com/TalusBio/vizta/issues"
"Discussion Board" = "https://github.com/TalusBio/vizta/discussions"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[tool.black]
line-length = 79
target-version = ['py312']

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
docs = [
    "mkdocs>=1.3.0",
    "mkdocstrings[python]>=0.18.1",
    "mkdocs-material>=8.2.1",
    "mkdocs-jupyter>=0.20.1",
    "ipykernel>=6.12.1",
]
