[metadata]
name = vizta
author = William E Fondrie
author_email = wfondrie@talus.bio
description = Themes for data visualization at Talus Bio.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TalusBio/vizta
project_urls =
    Documentation = https://TalusBio.github.io/vizta
    Bug Tracker = https://github.com/TalusBio/vizta/issues
    Discussion Board = https://github.com/TalusBio/vizta/discussions
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib>=3.5.1
    seaborn>=0.11.2
    
[options.extras_require]
docs =
    mkdocs>=1.3.0
    mkdocstrings>=0.18.1
    mkdocs-material>=8.2.1
    mkdocs-jupyter>=0.20.1
    ipykernel>=6.12.1
dev =
    pre-commit>=2.7.1
    black>=19.10b0
